feat(session): object offset
